<?xml version="1.0"?>
<package format="2">
  <name>ps4_controller</name>
  <version>0.0.0</version>
  <description>The ps4_controller package</description>

  <maintainer email="sugihara@todo.todo">sugihara</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
